--- a/assets/scss/customize/_variables.scss
+++ b/assets/scss/customize/_variables.scss
@@ -1,110 +1,167 @@
 // 自訂義顏色
 //overwrite bootstrap variables
 //Color
+
+  $primary-50: #f7f6ef;
+  $primary-100: #ece9d5;
+  $primary-200: #dad3ae;
+  $primary-300: #c5b77f;
+  $primary-400: #b39e5c;
+  $primary-500: #a48b4e;
+  $primary-600: #8d7141;
+  $primary-700: #715737;
+  $primary-800: #5b4530;
+  $primary-900: #543f2f;
+  $primary-950: #2f2119;
+
+  $accent-50: #fff7eb;
+  $accent-100: #fee9c7;
+  $accent-200: #fcd28b;
+  $accent-300: #fbaf44;
+  $accent-400: #fa9825;
+  $accent-500: #f4740c;
+  $accent-600: #d85107;
+  $accent-700: #b3340a;
+  $accent-800: #91280f;
+  $accent-900: #78220f;
+  $accent-950: #450e03;
+
+  $grey-0: #ffffff;
+  $grey-50: #f2f2f2;
+  $grey-100: #dbdbdb;
+  $grey-200: #c4c4c4;
+  $grey-300: #ADADAD;
+  $grey-400: #969696;
+  $grey-500: #808080;
+  $grey-600: #666666;
+  $grey-700: #4D4D4D;
+  $grey-800: #333333;
+  $grey-900: #1A1A1A;
+  $grey-950: #000000;
+
+  $alert-success-light: #EAF9CE;
+  $alert-success-normal: #468C15;
+  $alert-success-dark: #185106;
+
+  $alert-danger-light: #FCE1D3;
+  $alert-danger-normal: #D3282B;
+  $alert-danger-dark: #7A0C2B;
+
+  $alert-warning-light: #FBEEC9;
+  $alert-warning-normal: #AF6803;
+  $alert-warning-dark: #652F00;
+
+  $alert-info-light: #C8FAF2;
+  $alert-info-normal: #008CA5;
+  $alert-info-dark: #003A5F;
+
 $theme-colors: (
-  "primary-50": #f7f6ef,
-  "primary-100": #ece9d5,
-  "primary-200": #dad3ae,
-  "primary-300": #c5b77f,
-  "primary-400": #b39e5c,
-  "primary-500": #a48b4e,
-  "primary-600": #8d7141,
-  "primary-700": #715737,
-  "primary-800": #5b4530,
-  "primary-900": #543f2f,
-  "primary-950": #2f2119,
+  "primary-50": $primary-50,
+  "primary-100": $primary-100,
+  "primary-200": $primary-200,
+  "primary-300": $primary-300,
+  "primary-400": $primary-400,
+  "primary-500": $primary-500,
+  "primary-600": $primary-600,
+  "primary-700": $primary-700,
+  "primary-800": $primary-800,
+  "primary-900": $primary-900,
+  "primary-950": $primary-950,
 
-  "accent-50": #fff7eb,
-  "accent-100": #fee9c7,
-  "accent-200": #fcd28b,
-  "accent-300": #fbaf44,
-  "accent-400": #fa9825,
-  "accent-500": #f4740c,
-  "accent-600": #d85107,
-  "accent-700": #b3340a,
-  "accent-800": #91280f,
-  "accent-900": #78220f,
-  "accent-950": #450e03,
+  "accent-50": $accent-50,
+  "accent-100": $accent-100,
+  "accent-200": $accent-200,
+  "accent-300": $accent-300,
+  "accent-400": $accent-400,
+  "accent-500": $accent-500,
+  "accent-600": $accent-600,
+  "accent-700": $accent-700,
+  "accent-800": $accent-800,
+  "accent-900": $accent-900,
+  "accent-950": $accent-950,
 
-  "grey-0": #ffffff,
-  "grey-50": #f2f2f2,
-  "grey-100": #dbdbdb,
-  "grey-200": #c4c4c4,
-  "grey-300": #ADADAD,
-  "grey-400": #969696,
-  "grey-500": #808080,
-  "grey-600": #666666,
-  "grey-700": #4D4D4D,
-  "grey-800": #333333,
-  "grey-900": #1A1A1A,
-  "grey-950": #000000,
+  "grey-0": $grey-0,
+  "grey-50": $grey-50,
+  "grey-100": $grey-100,
+  "grey-200": $grey-200,
+  "grey-300": $grey-300,
+  "grey-400": $grey-400,
+  "grey-500": $grey-500,
+  "grey-600": $grey-600,
+  "grey-700": $grey-700,
+  "grey-800": $grey-800,
+  "grey-900": $grey-900,
+  "grey-950": $grey-950,
 
-  "alert-success-light":#EAF9CE,
-  "alert-success-normal":#468C15,
-  "alert-success-dark":#185106,
+  "alert-success-light": $alert-success-light,
+  "alert-success-normal": $alert-success-normal,
+  "alert-success-dark": $alert-success-dark,
 
-  "alert-danger-light":#FCE1D3,
-  "alert-danger-normal":#D3282B,
-  "alert-danger-dark":#7A0C2B,
+  "alert-danger-light": $alert-danger-light,
+  "alert-danger-normal": $alert-danger-normal,
+  "alert-danger-dark": $alert-danger-dark,
 
-  "alert-warning-light":#FBEEC9,
-  "alert-warning-normal":#AF6803,
-  "alert-warning-dark":#652F00,
+  "alert-warning-light": $alert-warning-light,
+  "alert-warning-normal": $alert-warning-normal,
+  "alert-warning-dark": $alert-warning-dark,
 
-  "alert-info-light":#C8FAF2,
-  "alert-info-normal":#008CA5,
-  "alert-info-dark":#003A5F,
+  "alert-info-light": $alert-info-light,
+  "alert-info-normal": $alert-info-normal,
+  "alert-info-dark": $alert-info-dark
 );
+
+
+
 
 // 自訂義字體
 //Typography
-$enable-rfs: false; // 是否啟用 RFS (Responsive Font Size)
-$font-size-base: 1rem;
-$header-title-font-size: $font-size-base * 12.5;
-$header-xxl-font-size: $font-size-base * 10;
-$header-xl-font-size: $font-size-base * 9;
-$header-l-font-size: $font-size-base * 8;
-$header-m-font-size: $font-size-base * 7;
-$header-s-font-size: $font-size-base * 6;
-$header-xs-font-size: $font-size-base * 5;
+// $enable-rfs: false; // 是否啟用 RFS (Responsive Font Size)
+// $font-size-base: 1rem;
+// $header-title-font-size: $font-size-base * 12.5;
+// $header-xxl-font-size: $font-size-base * 10;
+// $header-xl-font-size: $font-size-base * 9;
+// $header-l-font-size: $font-size-base * 8;
+// $header-m-font-size: $font-size-base * 7;
+// $header-s-font-size: $font-size-base * 6;
+// $header-xs-font-size: $font-size-base * 5;
 
-$label-l-font-size: $font-size-base * 4.5;
-$label-m-font-size: $font-size-base * 4;
-$label-s-font-size: $font-size-base * 3.5;
-$label-xs-font-size: $font-size-base * 3;
+// $label-l-font-size: $font-size-base * 4.5;
+// $label-m-font-size: $font-size-base * 4;
+// $label-s-font-size: $font-size-base * 3.5;
+// $label-xs-font-size: $font-size-base * 3;
 
-$paragraph-xl-font-size: $font-size-base * 5;
-$paragraph-l-font-size: $font-size-base * 4.5;
-$paragraph-m-font-size: $font-size-base * 4;
-$paragraph-s-font-size: $font-size-base * 3.5;
-$paragraph-xs-font-size: $font-size-base * 3;
+// $paragraph-xl-font-size: $font-size-base * 5;
+// $paragraph-l-font-size: $font-size-base * 4.5;
+// $paragraph-m-font-size: $font-size-base * 4;
+// $paragraph-s-font-size: $font-size-base * 3.5;
+// $paragraph-xs-font-size: $font-size-base * 3;
 
-// 自訂義間距
-//Spacing
-$spacer: 1px;
-$spacers: (
-  0: 0,
-  xxs: $spacer * 4,
-  xs: $spacer * 8,
-  s: $spacer * 12,
-  m: $spacer *16,
-  l: $spacer * 20,
-  xl: $spacer *24,
-  xxl: $spacer *32,
-  xxxl: $spacer *40,
-  4xl: $spacer *48,
-  5xl: $spacer *56,
-  6xl: $spacer *64,
-);
+// // 自訂義間距
+// //Spacing
+// $spacer: 1px;
+// $spacers: (
+//   0: 0,
+//   xxs: $spacer * 4,
+//   xs: $spacer * 8,
+//   s: $spacer * 12,
+//   m: $spacer *16,
+//   l: $spacer * 20,
+//   xl: $spacer *24,
+//   xxl: $spacer *32,
+//   xxxl: $spacer *40,
+//   4xl: $spacer *48,
+//   5xl: $spacer *56,
+//   6xl: $spacer *64,
+// );
 
-//自訂圓角
-//Radius
-$border-radius-s: 1px;
-$border-radius-m: 8px;
-$border-radius-l: 12px;
-$border-radius-xl: 16px;
-$border-radius-round: 1000px;
+// //自訂圓角
+// //Radius
+// $border-radius-s: 1px;
+// $border-radius-m: 8px;
+// $border-radius-l: 12px;
+// $border-radius-xl: 16px;
+// $border-radius-round: 1000px;
 
 
-//自訂陰影
-$box-shadow: 0 0 1rem rgba(#000, 0.12) !default;
+// //自訂陰影
+// $box-shadow: 0 0 1rem rgba(#000, 0.12) !default;
