--- a/assets/scss/base/_utils.scss
+++ b/assets/scss/base/_utils.scss
@@ -1,1 +1,111 @@
- 
+//https://learn.microsoft.com/zh-tw/dotnet/api/system.drawing.fontstyle?view=windowsdesktop-9.0&viewFallbackFrom=dotnet-plat-ext-8.0
+
+.heading-header-title {
+     font-family: "Noto Sans TC", sans-serif;
+     font-weight: 400;
+     font-size: 50px;
+     line-height: 1.2;
+     letter-spacing: 12px;
+ }
+
+ .heading-xxlarge {
+     font-family: "Noto Sans TC", sans-serif;
+     font-weight: 400;
+     font-size: 40px;
+     line-height: 1.2;
+
+ }
+
+ .heading-xlarge {
+     font-family: "Noto Sans TC", sans-serif;
+     font-weight: 400;
+     font-size: 36px;
+     line-height: 1.2;
+
+ }
+
+ .heading-medium {
+     font-family: "Noto Sans TC", sans-serif;
+     font-weight: 400;
+     font-size: 28px;
+     line-height: 1.2;
+ }
+
+ .heading-small {
+     font-family: "Noto Sans TC", sans-serif;
+     font-weight: 400;
+     font-size: 24px;
+     line-height: 1.2;
+ }
+
+
+ .heading-xsmall {
+     font-family: "Noto Sans TC", sans-serif;
+     font-weight: 400;
+     font-size: 20px;
+     line-height: 1.2;
+ }
+
+
+ .label-large {
+     font-family: "Noto Sans TC", sans-serif;
+     font-weight: 700;
+     font-size: 18px;
+     line-height: 1.5;
+ }
+
+ .label-medium {
+     font-family: "Noto Sans TC", sans-serif;
+     font-weight: 700;
+     font-size: 16px;
+     line-height: 1.5;
+ }
+
+ .label-small {
+     font-family: "Noto Sans TC", sans-serif;
+     font-weight: 700;
+     font-size: 14px;
+     line-height: 1.5;
+ }
+
+ .label-xsmall {
+     font-family: "Noto Sans TC", sans-serif;
+     font-weight: 700;
+     font-size: 12px;
+     line-height: 1.5;
+ }
+
+ .paragraph-xlarge{
+     font-family: "Noto Sans TC", sans-serif;
+     font-weight: 400;
+     font-size: 20px;
+     line-height: 1.5;
+ }
+
+  .paragraph-large{
+     font-family: "Noto Sans TC", sans-serif;
+     font-weight: 400;
+     font-size: 18px;
+     line-height: 1.5;
+ }
+
+  .paragraph-medium{
+     font-family: "Noto Sans TC", sans-serif;
+     font-weight: 400;
+     font-size: 16px;
+     line-height: 1.5;
+ }
+
+  .paragraph-small{
+     font-family: "Noto Sans TC", sans-serif;
+     font-weight: 400;
+     font-size: 14px;
+     line-height: 1.5;
+ }
+
+  .paragraph-xsamll{
+     font-family: "Noto Sans TC", sans-serif;
+     font-weight: 400;
+     font-size: 12px;
+     line-height: 1.5;
+ }
