Co-authored-by: xaweiouo <xaweiouo@users.noreply.github.com> Co-authored-by: sherry9236 <sherry9236@users.noreply.github.com> Co-authored-by: ShihHsun <ShihHsun@users.noreply.github.com>

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,6 +1,12 @@
 // google 字體
 @import url('<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">');
 
+@font-face {
+  font-family: "ChenYuluoyan";
+  src:
+    url("./assets/fonts/ChenYuluoyan-2.0-Thin.ttf");
+}
+
 // 自訂義Bootstrap
 @import "../../node_modules/bootstrap/scss/functions";
 
