--- a/assets/scss/base/_utils.scss
+++ b/assets/scss/base/_utils.scss
@@ -109,3 +109,10 @@
      font-size: 12px;
      line-height: 1.5;
  }
+
+   .ChenYuluoyan{
+     font-family: "ChenYuluoyan", sans-serif;
+     font-weight: 400;
+     font-size: 12px;
+     line-height: 1.5;
+ }
