Co-authored-by: xaweiouo <xaweiouo@users.noreply.github.com>

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -4,7 +4,7 @@
 @font-face {
   font-family: "ChenYuluoyan";
   src:
-    url("./assets/fonts/ChenYuluoyan-2.0-Thin.ttf");
+    url("/assets/fonts/ChenYuluoyan-2.0-Thin.ttf");
 }
 
 // 自訂義Bootstrap
