--- a/assets/scss/base/_utils.scss
+++ b/assets/scss/base/_utils.scss
@@ -75,6 +75,13 @@
      line-height: 1.5;
  }
 
+ .paragraph-xxlarge{
+     font-family: "Noto Sans TC", sans-serif;
+     font-weight: 400;
+     font-size: 24px;
+     line-height: 1.5;
+ }
+
  .paragraph-xlarge{
      font-family: "Noto Sans TC", sans-serif;
      font-weight: 400;
