--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,50 +1,56 @@
-<div class="container">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">首頁</a>
-                    </li>
-                   <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="about.html">關於羊蹄</a>
-                    </li>
-                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="products.html">線上商店</a>
-                    </li>
-                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="explore.html">探索風味</a>
-                    </li>
-                     
-                    <!-- <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                    </li> -->
-                </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+<div class="bg-primary-800">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-4">
+                <nav class="navbar nav-padding navbar-expand-lg  ">
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <!-- flex-basis auto  need close  -->
+                        <ol class="breadcrumb me-auto mb-2 mb-lg-0 color-primary-50">
+                        <li class="breadcrumb-item ">
+                            <a class="nav-link" aria-current="page" href="about.html"
+                            >關於羊蹄</a
+                            >
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a class="nav-link d-inline-block" aria-current="page" href="products.html"
+                            >線上商店</a
+                            >
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a class="nav-link d-inline-block" aria-current="page" href="explore.html"
+                            >探索風味</a
+                            >
+                        </li>
+                        </ol>        
+                    </div>
+                </nav>
             </div>
+
+            <div class="col-6">
+                <nav class="navbar">
+                    <div class="navbar-brand">
+                        <a class="navbar-brand" href="#">
+                        <img src="/assets/images/Type=White.png" alt="" width="240px" height="56px">
+                        </a>
+                    </div>
+                </nav>
+            </div>
+
+            <div class="col-11">
+                <nav class="nav">
+                    <div class="navbar navbar-toggler">
+                        <a class="nav-link" href="#">
+                        <img src="/assets/images/ic_Shopping_Cart.png" alt="" width="26.25px" height="26.25px">
+                        </a>
+                    </div>
+                    <div class="">
+                        <a class="nav-link" href="#">
+                        <img src="/assets/images/ic_User.png" alt="" width="24px" height="30px">
+                        </a>
+                    </div>
+                </nav>
+            </div>
+        
         </div>
-    </nav>
+    </div>
 </div>
