--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,56 +1,82 @@
 <div class="bg-primary-800">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-4">
-                <nav class="navbar nav-padding navbar-expand-lg  ">
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <!-- flex-basis auto  need close  -->
-                        <ol class="breadcrumb me-auto mb-2 mb-lg-0 color-primary-50">
-                        <li class="breadcrumb-item ">
-                            <a class="nav-link" aria-current="page" href="about.html"
-                            >關於羊蹄</a
-                            >
-                        </li>
-                        <li class="breadcrumb-item">
-                            <a class="nav-link d-inline-block" aria-current="page" href="products.html"
-                            >線上商店</a
-                            >
-                        </li>
-                        <li class="breadcrumb-item">
-                            <a class="nav-link d-inline-block" aria-current="page" href="explore.html"
-                            >探索風味</a
-                            >
-                        </li>
-                        </ol>        
-                    </div>
-                </nav>
-            </div>
+  <div class="container">
+    <div class="row align-items-center">
+      <!-- 左側 breadcrumb -->
+      <div class="col-2 col-md-4">
+        <nav class="navbar nav-padding navbar-expand-lg">
+          <!-- RWD漢堡選單  拉出選單尚未設置-->
+          <button
+            class="navbar-toggler border-0"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <!-- breadcrumb -->
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ol class="breadcrumb me-auto mb-2 mb-lg-0 color-primary-50">
+              <li class="breadcrumb-item">
+                <a class="nav-link" aria-current="page" href="about.html"
+                  >關於羊蹄</a
+                >
+              </li>
+              <li class="breadcrumb-item">
+                <a
+                  class="nav-link d-inline-block"
+                  aria-current="page"
+                  href="products.html"
+                  >線上商店</a
+                >
+              </li>
+              <li class="breadcrumb-item">
+                <a
+                  class="nav-link d-inline-block"
+                  aria-current="page"
+                  href="explore.html"
+                  >探索風味</a
+                >
+              </li>
+            </ol>
+          </div>
+        </nav>
+      </div>
 
-            <div class="col-6">
-                <nav class="navbar">
-                    <div class="navbar-brand">
-                        <a class="navbar-brand" href="#">
-                        <img src="/assets/images/Type=White.png" alt="" width="240px" height="56px">
-                        </a>
-                    </div>
-                </nav>
-            </div>
+      <!-- 中間 logo -->
+      <div class="col-6 col-md-4 text-center">
+        <a class="navbar-brand d-inline-block" href="index.html">
+          <img
+            src="/assets/images/Type=White.png"
+            alt="品牌 Logo"
+            width="240"
+            height="56" />
+        </a>
+      </div>
 
-            <div class="col-2">
-                <nav class="nav">
-                    <div class="navbar navbar-toggler">
-                        <a class="nav-link" href="#">
-                        <img src="/assets/images/ic_Shopping_Cart.png" alt="" width="26.25px" height="26.25px">
-                        </a>
-                    </div>
-                    <div class="">
-                        <a class="nav-link" href="#">
-                        <img src="/assets/images/ic_User.png" alt="" width="24px" height="30px">
-                        </a>
-                    </div>
-                </nav>
-            </div>
-        
-        </div>
+      <!-- 右側購物車 & 會員  RWD會消失-->
+      <div class="col-4 col-md-4">
+        <nav class="d-flex justify-content-end align-items-center gap-3 header-right">
+          <a class="nav-link p-12" href="#">
+            <img
+              src="/assets/images/ic_Shopping_Cart.png"
+              alt="購物車"
+              width="26"
+              height="26" />
+          </a>
+          <a class="nav-link p-12" href="#">
+            <img
+              src="/assets/images/ic_User.png"
+              alt="會員"
+              width="24"
+              height="30" />
+          </a>
+        </nav>
+      </div>
     </div>
+
+    
+
+  </div>
 </div>
