--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -17,7 +17,7 @@
           </button>
           <!-- breadcrumb -->
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ol class="breadcrumb me-auto mb-2 mb-lg-0 color-primary-50">
+            <ol class="breadcrumb me-auto mb-2 mb-lg-0 text-primary-50">
               <li class="breadcrumb-item">
                 <a class="nav-link" aria-current="page" href="about.html"
                   >關於羊蹄</a
@@ -46,7 +46,7 @@
 
       <!-- 中間 logo -->
       <div class="col-6 col-md-4 text-center">
-        <a class="navbar-brand d-inline-block" href="index.html">
+        <a class="navbar-brand py-16 d-inline-block" href="index.html">
           <img
             src="/assets/images/Type=White.png"
             alt="品牌 Logo"
@@ -58,7 +58,7 @@
       <!-- 右側購物車 & 會員  RWD會消失-->
       <div class="col-4 col-md-4">
         <nav class="d-flex justify-content-end align-items-center gap-3 header-right">
-          <a class="nav-link p-12" href="#">
+          <a class="nav-link p-12 me-12" href="#">
             <img
               src="/assets/images/ic_Shopping_Cart.png"
               alt="購物車"
