--- a/assets/scss/base/_utils.scss
+++ b/assets/scss/base/_utils.scss
@@ -80,6 +80,7 @@
      font-weight: 400;
      font-size: 24px;
      line-height: 1.5;
+     letter-spacing: 2.4px;
  }
 
  .paragraph-xlarge{
@@ -94,6 +95,7 @@
      font-weight: 400;
      font-size: 18px;
      line-height: 1.5;
+     letter-spacing: 2px;
  }
 
   .paragraph-medium{
