--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -19,6 +19,10 @@
     justify-content: center;
     align-items: center;
   }
+  .btn{
+    padding: 16px 40px;
+    border-radius: 100px;
+  }
   .vertical-line1 {
     width: 1px;
     height: 30vh;
