--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -18,12 +18,12 @@
           <!-- breadcrumb -->
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ol class="breadcrumb me-auto mb-2 mb-lg-0 color-primary-50">
-              <li class="breadcrumb-item">
+              <li class="breadcrumb-item header-hover">
                 <a class="nav-link" aria-current="page" href="about.html"
                   >關於羊蹄</a
                 >
               </li>
-              <li class="breadcrumb-item">
+              <li class="breadcrumb-item header-hover">
                 <a
                   class="nav-link d-inline-block"
                   aria-current="page"
@@ -31,7 +31,7 @@
                   >線上商店</a
                 >
               </li>
-              <li class="breadcrumb-item">
+              <li class="breadcrumb-item header-hover">
                 <a
                   class="nav-link d-inline-block"
                   aria-current="page"
@@ -46,12 +46,13 @@
 
       <!-- 中間 logo -->
       <div class="col-6 col-md-4 text-center">
-        <a class="navbar-brand d-inline-block" href="index.html">
+        <a class="navbar-brand d-inline-block header-hover" href="index.html">
           <img
             src="/assets/images/Type=White.png"
             alt="品牌 Logo"
             width="240"
-            height="56" />
+            height="56" 
+            class="header-hover"/>
         </a>
       </div>
 
@@ -63,14 +64,16 @@
               src="/assets/images/ic_Shopping_Cart.png"
               alt="購物車"
               width="26"
-              height="26" />
+              height="26" 
+              class="header-hover"/>
           </a>
           <a class="nav-link p-12" href="#">
             <img
               src="/assets/images/ic_User.png"
               alt="會員"
               width="24"
-              height="30" />
+              height="30" 
+              class="header-hover"/>
           </a>
         </nav>
       </div>
