--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -2,6 +2,11 @@
   padding: 5px 10px;
 }
 
+.color-primary-50{
+  color: #F7F6EF;
+  font-size: 16px;
+}
+
 .breadcrumb-item + .breadcrumb-item::before{
   color: #F7F6EF;
   padding-left: 12px;
