--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -7,9 +7,29 @@
     background-position: center center;
     position: relative;
   }
+  .header2{
+    height: calc(100vh - 88px);
+    background-size: cover;
+    background-image: url(/assets/images/index/banner2.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    position: relative;
+  }
   .header1-text{
     position: absolute;
-    background-color: rgba(black, 0.23);
+    background-color: rgba(black, 0.33);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .header2-text{
+    position: absolute;
+    background-color: rgba(black, 0.4);
     top: 0;
     bottom: 0;
     left: 0;
@@ -22,9 +42,12 @@
   .btn{
     padding: 16px 40px;
     border-radius: 100px;
+    background-color: #f7f6ef;
+    color: #2f2119;
+
+    &:hover {
+      background-color: #dad3ae;
   }
-  .btn:hover{
-    background-color: $primary-200;
   }
   .vertical-line1 {
     width: 1px;
@@ -34,6 +57,11 @@
   .vertical-line2 {
     width: 1px;
     height: 20vh;
+    background-color: #f7f6ef;
+  }
+  .vertical-line3 {
+    width: 1px;
+    height: 19vh;
     background-color: #f7f6ef;
   }
   
@@ -49,6 +77,12 @@
     background-color: #f7f6ef;
     animation: lineGrow2 2s ease-out forwards;
   }
+  .vertical-line3 {
+    width: 1px;
+    height: 0;
+    background-color: #f7f6ef;
+    animation: lineGrow3 2s ease-out forwards;
+  }
   
   @keyframes lineGrow1 {
     to {
@@ -58,6 +92,11 @@
   @keyframes lineGrow2 {
     to {
       height: 20vh;
+    }
+  }
+  @keyframes lineGrow3 {
+    to {
+      height: 19vh;
     }
   }
 }
