1832 change png to svg

--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="row align-items-center">
       <!-- 左側 breadcrumb -->
-      <div class="col-2 col-md-4">
-        <nav class="navbar nav-padding navbar-expand-lg">
+      <div class=" col-md-4">
+        <nav class="navbar nav-padding navbar-expand-md nav-font-size">
           <!-- RWD漢堡選單  拉出選單尚未設置-->
           <button
             class="navbar-toggler border-0"
@@ -12,20 +12,21 @@
             data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent"
             aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+            aria-label="Toggle navigation"></button>
           <!-- breadcrumb -->
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ol class="breadcrumb me-auto mb-2 mb-lg-0 color-primary-50">
               <li class="breadcrumb-item header-hover">
-                <a class="nav-link" aria-current="page" href="about.html"
+                <a
+                  class="nav-link d-inline-block p-12"
+                  aria-current="page"
+                  href="about.html"
                   >關於羊蹄</a
                 >
               </li>
               <li class="breadcrumb-item header-hover">
                 <a
-                  class="nav-link d-inline-block"
+                  class="nav-link d-inline-block p-12"
                   aria-current="page"
                   href="products.html"
                   >線上商店</a
@@ -33,7 +34,7 @@
               </li>
               <li class="breadcrumb-item header-hover">
                 <a
-                  class="nav-link d-inline-block"
+                  class="nav-link d-inline-block p-12"
                   aria-current="page"
                   href="explore.html"
                   >探索風味</a
@@ -45,41 +46,35 @@
       </div>
 
       <!-- 中間 logo -->
-      <div class="col-6 col-md-4 text-center">
-        <a class="navbar-brand d-inline-block header-hover" href="index.html">
+      <div class=" col-md-4 py-16 text-center">
+        <a class="navbar-brand d-inline-block" href="index.html">
           <img
-            src="/assets/images/Type=White.png"
+            src="/assets/images/Logo.svg"
             alt="品牌 Logo"
             width="240"
-            height="56" 
-            class="header-hover"/>
+            height="56" />
         </a>
       </div>
 
       <!-- 右側購物車 & 會員  RWD會消失-->
-      <div class="col-4 col-md-4">
-        <nav class="d-flex justify-content-end align-items-center gap-3 header-right">
+      <div class=" col-md-4">
+        <nav class="d-flex justify-content-end align-items-center gap-3">
           <a class="nav-link p-12 me-12" href="#">
             <img
-              src="/assets/images/ic_Shopping_Cart.png"
+              src="/assets/images/ic_Shopping_Cart.svg"
               alt="購物車"
               width="26"
-              height="26" 
-              class="header-hover"/>
+              height="26" />
           </a>
           <a class="nav-link p-12" href="#">
             <img
-              src="/assets/images/ic_User.png"
+              src="/assets/images/ic_User.svg"
               alt="會員"
               width="24"
-              height="30" 
-              class="header-hover"/>
+              height="30" />
           </a>
         </nav>
       </div>
     </div>
-
-    
-
   </div>
 </div>
