--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,16 +1,17 @@
-.nav-padding{
-  padding: 5px 10px;
-}
-
-.color-primary-50{
-  color: #F7F6EF;
+.nav-font-size{
   font-size: 16px;
+  font-weight: 400px;
+  line-height: 1.5;
+}
+.color-primary-50{
+  color: $primary-50;
 }
 
 .breadcrumb-item + .breadcrumb-item::before{
-  color: #F7F6EF;
+  color: $primary-50;
   padding-left: 12px;
   padding-right: 12px;
+  float:none;
 }
 
 .navbar-toggler {
@@ -24,7 +25,7 @@
 
 /* 桌機 breadcrumb 連結顏色 */
 .header-hover:hover {
-    color: #FBAF44;
+  color: #FBAF44;
 }
 
 
