--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -44,6 +44,7 @@
     border-radius: 100px;
     background-color: #f7f6ef;
     color: #2f2119;
+    border: none;
 
     &:hover {
       background-color: #dad3ae;
