--- a/assets/scss/pages/_about.scss
+++ b/assets/scss/pages/_about.scss
@@ -1,4 +1,38 @@
-.about{
-  background: #69F0AE;
-  font-size: 64px;
+.about-1{
+  width: 100%;
+  height: 400px;
+  background-size: cover;
+  background-image: url(/assets/images/index/banner1.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  position: relative;
+}
+
+.about-bg-color{
+  background-color: rgba(#3120003B, 50%);  
+  height: 400px;
+}
+
+.about-2{
+  max-width: 100%;
+  height: 667px;
+  background-size: cover;
+  background-image: url(/assets/images/index/banner3.png);
+  background-repeat: no-repeat;
+  background-position:  top 50%;
+  position: relative;
+  // padding: 120px 312px 120px 312px;
+}
+
+.about-position{
+  padding: 140px 312px;
+}
+
+.horizontal{
+  width: 80px;
+  height: 1px;
+  background-color: $primary-950;
+  margin-top: 21px;
+  margin-bottom: 21px;
+  margin-left: 16px;
 }
