--- a/assets/scss/base/_utils.scss
+++ b/assets/scss/base/_utils.scss
@@ -8,6 +8,15 @@
      letter-spacing: 12px;
  }
 
+  .heading-xxxlarge {
+     font-family: "Noto Sans TC", sans-serif;
+     font-weight: 400;
+     font-size: 50px;
+     line-height: 1.2;
+     letter-spacing: 0.3em;
+
+ }
+
  .heading-xxlarge {
      font-family: "Noto Sans TC", sans-serif;
      font-weight: 400;
