--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -100,6 +100,12 @@
       height: 19vh;
     }
   }
+
+  .moon{
+    height: 100vh;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+  }
 }
 
 @media (max-width: 768px) {
