--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -45,10 +45,28 @@
     background-color: #f7f6ef;
     color: #2f2119;
     border: none;
+    text-decoration: none;
 
     &:hover {
       background-color: #dad3ae;
   }
+  }
+  .btn2{
+    padding: 12px 24px;
+    border-radius: 100px;
+    background-color: #5b4530;
+    color: #f7f6ef;
+    border: none;
+    text-decoration: none;
+
+    &:hover {
+      background-color: #8d7141;
+  }
+  }
+  .horizontal-line{
+    width: 80px;
+    height: 1.5px;
+    background-color: #2F2119;
   }
   .vertical-line1 {
     width: 1px;
@@ -105,6 +123,10 @@
     height: 100vh;
     padding-top: 5vh;
     padding-bottom: 5vh;
+
+    .col-4{
+      height: 90vh;
+    }
   }
 }
 
