圖片路徑測試

--- a/assets/scss/pages/_explore.scss
+++ b/assets/scss/pages/_explore.scss
@@ -7,7 +7,7 @@
     height: 992px;
 
     // 背景圖
-    background-image: url(../../assets/images/explore/explore-bg1.png);
+    background-image: url(/assets/images/explore/explore-bg1.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
