微調中秋節

--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -17,7 +17,7 @@
   }
   .header1-text{
     position: absolute;
-    background-color: rgba(black, 0.33);
+    background-color: rgba(#312000, 0.33);
     top: 0;
     bottom: 0;
     left: 0;
@@ -29,7 +29,7 @@
   }
   .header2-text{
     position: absolute;
-    background-color: rgba(black, 0.4);
+    background-color: rgba(#312000, 0.4);
     top: 0;
     bottom: 0;
     left: 0;
