更新共用按鈕 20250905 1256

--- a/assets/scss/pages/_explore.scss
+++ b/assets/scss/pages/_explore.scss
@@ -4,7 +4,7 @@
   .start {
     // 大小
     max-width: 100%;
-    height: 992px;
+    // height: 992px;
 
     // 背景圖
     background-image: url(/assets/images/explore/explore-bg1.png);
