--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -44,6 +44,11 @@
     height: 1.5px;
     background-color: #2F2119;
   }
+  .new .horizontal-line2{
+    flex-grow: 1;
+    height: 1.5px;
+    background-color: #715737;
+  }
   .vertical-line1 {
     width: 1px;
     height: 28vh;
