--- a/assets/scss/customize/_variables.scss
+++ b/assets/scss/customize/_variables.scss
@@ -123,6 +123,7 @@ $spacer40:40px;//#spacing-xxxl
 $spacer48:48px;//#spacing-4xl
 $spacer56:56px;//#spacing-5xl
 $spacer64:64px;//#spacing-6xl
+$spacer82:82px;//#spacing-8xl
 $spacer120:120px;//#spacing-12xl
 $spacer234:234px;//#spacing-23xl
 $spacers: (
@@ -138,6 +139,7 @@ $spacers: (
   48: $spacer48,
   56: $spacer56,
   64: $spacer64,
+  82: $spacer82,
   120: $spacer120,
   234: $spacer234,
 ); 
