--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -15,6 +15,16 @@
     background-position: center center;
     position: relative;
   }
+  .explore-ad{
+    height: 454px;
+    background-size: cover;
+    background-image: url(/assets/images/index/explore-ad.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    position: relative;
+    background-color: rgba(#5F300F, 0.35);
+    background-blend-mode: multiply;
+  }
   .header1-text{
     position: absolute;
     background-color: rgba(#312000, 0.33);
@@ -44,10 +54,15 @@
     height: 1.5px;
     background-color: #2F2119;
   }
-  .new .horizontal-line2{
+  .horizontal-line2{
     flex-grow: 1;
     height: 1.5px;
     background-color: #715737;
+  }
+  .horizontal-line3{
+    width: 50px;
+    height: 3px;
+    background-color: #FFFFFF;
   }
   .vertical-line1 {
     width: 1px;
