好評標題完成

--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -20,7 +20,7 @@
     background-size: cover;
     background-image: url(/assets/images/index/explore-ad.jpg);
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: 50% 60%;
     position: relative;
     background-color: rgba(#5F300F, 0.35);
     background-blend-mode: multiply;
