--- a/assets/scss/pages/_proudcts.scss
+++ b/assets/scss/pages/_proudcts.scss
@@ -1,4 +1,27 @@
-.products{
-  background: #69F0AE;
-  font-size: 64px;
+.products-bg{
+  background-color:#FCFAF8;
+}
+
+.productsHeart{
+  width: 0;
+  height: 0;
+}
+
+.productsHeart:checked + .products-heartFilled{
+  opacity: 1;
+}
+
+.products-heartOutlined {
+  position: absolute;
+  top: 28px;
+  right: 28px;
+  cursor: pointer;
+}
+
+.products-heartFilled{
+  position: absolute;
+  top: 28px;
+  right: 28px;
+  opacity: 0;
+  cursor: pointer;
 }
