--- a/assets/scss/base/_utils.scss
+++ b/assets/scss/base/_utils.scss
@@ -89,7 +89,7 @@
      font-weight: 400;
      font-size: 24px;
      line-height: 1.5;
-     letter-spacing: 2.4px;
+     letter-spacing: 0.1em;
  }
 
  .paragraph-xlarge{
