--- a/assets/scss/customize/_variables.scss
+++ b/assets/scss/customize/_variables.scss
@@ -124,6 +124,7 @@ $spacer48:48px;//#spacing-4xl
 $spacer56:56px;//#spacing-5xl
 $spacer64:64px;//#spacing-6xl
 $spacer82:82px;//#spacing-8xl
+$spacer88:88px;//#spacing-88xl
 $spacer120:120px;//#spacing-12xl
 $spacer234:234px;//#spacing-23xl
 $spacers: (
@@ -140,6 +141,7 @@ $spacers: (
   56: $spacer56,
   64: $spacer64,
   82: $spacer82,
+  88: $spacer88,
   120: $spacer120,
   234: $spacer234,
 ); 
