--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -28,7 +28,20 @@
   color: #FBAF44;
 }
 
+.logo {
+  display: inline-block;
+  width: 240px;
+  height: 56px;
+  background: url("/assets/images/Logo.svg") no-repeat center / contain;
+}
 
+@media (max-width: 767px) {
+  .logo {
+    width: 40px;
+    height: 40px;
+    background: url("/assets/images/small-logo.svg") no-repeat center / contain;
+  }
+}
 
 /* 漢堡 icon 白色 */
 .navbar-toggler {
