--- a/assets/scss/pages/_explore.scss
+++ b/assets/scss/pages/_explore.scss
@@ -89,6 +89,22 @@
       }
     }
 
+     &.bg4 {
+      background-image: url(/assets/images/explore/explore-bg2.png);
+      // 推
+      padding-top: 220px;
+      padding-left: 312px;
+      padding-right: 312px;
+      padding-bottom: 220px;
+
+      @media (max-width: 768px) {
+        padding-top: 40px;
+        padding-left: 24px;
+        padding-right: 24px;
+        padding-bottom: 16px;
+      }
+    }
+
     // 大小
     max-width: 100%;
     background-repeat: no-repeat;
