--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -12,7 +12,8 @@
             data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent"
             aria-expanded="false"
-            aria-label="Toggle navigation"></button>
+            aria-label="Toggle navigation">
+          </button>
           <!-- breadcrumb -->
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ol class="breadcrumb me-auto mb-2 mb-lg-0 color-primary-50">
