--- a/assets/scss/pages/_explore.scss
+++ b/assets/scss/pages/_explore.scss
@@ -18,6 +18,15 @@
     letter-spacing: 0.08rem;
     text-align: center;
   }
+  
+  .h3 {
+    font-family: 'cy2', sans-serif;
+    font-weight: 400;
+    font-size: 86px;
+    line-height: 1.2;
+    letter-spacing: 0.08rem;
+    text-align: center;
+  }
 
   p {
     font-weight: 400;
