--- a/assets/scss/pages/_explore.scss
+++ b/assets/scss/pages/_explore.scss
@@ -112,6 +112,25 @@
       }
     }
 
+    &.bg3-1 {
+      background-image: url(/assets/images/explore/explore-bg3-1.png);
+      // 推
+      padding-top: 220px;
+      padding-left: 312px;
+      padding-right: 312px;
+      padding-bottom: 220px;
+
+      // 透明度 半透明遮罩
+      background-color: rgba(49, 32, 0, 0.3);
+
+      @media (max-width: 768px) {
+        padding-top: 40px;
+        padding-left: 12px;
+        padding-right: 12px;
+        padding-bottom: 109px;
+      }
+    }
+
     &.bg4 {
       background-image: url(/assets/images/explore/explore-bg4.png);
       // 推
