--- a/assets/scss/pages/_proudcts.scss
+++ b/assets/scss/pages/_proudcts.scss
@@ -46,13 +46,29 @@
 //   color:black;
 // }
 
-// .search{
-//   width: 298px;
-// }
+
+.ratio>*{
+  left: auto;
+  user-select: none;
+}
+
+
+.products-label{
+  width: 100%;
+  height: 100%;
+}
 
 .productsHeart{
-  width: 0;
-  height: 0;
+  display: none;
+}
+
+.heartArea{
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  z-index: 2;
 }
 
 .productsHeart:checked + .products-heartFilled{
@@ -61,15 +77,11 @@
 
 .products-heartOutlined {
   position: absolute;
-  top: 8px;
-  right: 8px;
   cursor: pointer;
 }
 
 .products-heartFilled{
   position: absolute;
-  top: 8px;
-  right: 8px;
   opacity: 0;
   cursor: pointer;
 }
@@ -96,20 +108,27 @@
 }
 
 @media(min-width:1200px){
+  .heartArea{
+  width: 36px;
+  height: 36px;
+  position: absolute;
+  top: 28px;
+  right: 28px;
+  bottom: auto;
+  left: auto;
+  z-index: 2;  
+}
+
   .products-heartOutlined {
   position: absolute;  
   width:36px;
-  height:36px;
-  top: 28px;
-  right: 28px;
+  height:36px;  
 }
 
 .products-heartFilled{
   position: absolute;
   width:36px;
-  height:36px;
-  top: 28px;
-  right: 28px;
+  height:36px;  
 }
 }
 
@@ -127,11 +146,11 @@
   }
 
   .products-paragraph-md-xlarge{
-     font-family: "Noto Sans TC", sans-serif;
-     font-weight: 400;
-     font-size: 20px;
-     line-height: 1.5;
-     letter-spacing: 2px;
+    font-family: "Noto Sans TC", sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 1.5;
+    letter-spacing: 2px;
  }
 
  .products-label-md-large{
