--- a/assets/scss/customize/_variables.scss
+++ b/assets/scss/customize/_variables.scss
@@ -118,6 +118,7 @@ $spacer12:12px;//#spacing-s
 $spacer16:16px;//#spacing-m
 $spacer20:20px;//#spacing-l
 $spacer24:24px;//#spacing-xl
+$spacer28:28px;//#spacing-28
 $spacer32:32px;//#spacing-xxl
 $spacer40:40px;//#spacing-xxxl
 $spacer48:48px;//#spacing-4xl
@@ -135,6 +136,7 @@ $spacers: (
   16: $spacer16,
   20: $spacer20,
   24: $spacer24,
+  28: $spacer28,
   32: $spacer32,
   40: $spacer40,
   48: $spacer48,
