--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,5 +1,7 @@
-.index{
-  .header1{
+.index {
+  background-color: #FCFAF8;
+
+  .header1 {
     height: calc(100vh - 88px);
     background-size: cover;
     background-image: url(/assets/images/index/banner1.png);
@@ -7,7 +9,8 @@
     background-position: center center;
     position: relative;
   }
-  .header2{
+
+  .header2 {
     height: calc(100vh - 88px);
     background-size: cover;
     background-image: url(/assets/images/index/banner2.png);
@@ -15,7 +18,8 @@
     background-position: center center;
     position: relative;
   }
-  .explore-ad{
+
+  .explore-ad {
     height: 454px;
     background-size: cover;
     background-image: url(/assets/images/index/explore-ad.jpg);
@@ -25,7 +29,8 @@
     background-color: rgba(#5F300F, 0.35);
     background-blend-mode: multiply;
   }
-  .header1-text{
+
+  .header1-text {
     position: absolute;
     background-color: rgba(#312000, 0.33);
     top: 0;
@@ -37,7 +42,8 @@
     justify-content: center;
     align-items: center;
   }
-  .header2-text{
+
+  .header2-text {
     position: absolute;
     background-color: rgba(#312000, 0.4);
     top: 0;
@@ -49,84 +55,117 @@
     justify-content: center;
     align-items: center;
   }
-  .horizontal-line{
+
+  .horizontal-line {
     width: 80px;
     height: 1.5px;
     background-color: #2F2119;
   }
-  .horizontal-line2{
+
+  .horizontal-line2 {
     flex-grow: 1;
     height: 1.5px;
     background-color: #715737;
   }
-  .horizontal-line3{
+
+  .horizontal-line3 {
     width: 50px;
     height: 3px;
     background-color: #FFFFFF;
   }
+
   .vertical-line1 {
     width: 1px;
     height: 28vh;
     background-color: #f7f6ef;
   }
+
   .vertical-line2 {
     width: 1px;
     height: 20vh;
     background-color: #f7f6ef;
   }
+
   .vertical-line3 {
     width: 1px;
     height: 19vh;
     background-color: #f7f6ef;
   }
-  
+
   .vertical-line1 {
     width: 1px;
     height: 0;
     background-color: #f7f6ef;
     animation: lineGrow1 2s ease-out forwards;
   }
+
   .vertical-line2 {
     width: 1px;
     height: 0;
     background-color: #f7f6ef;
     animation: lineGrow2 2s ease-out forwards;
   }
+
   .vertical-line3 {
     width: 1px;
     height: 0;
     background-color: #f7f6ef;
     animation: lineGrow3 2s ease-out forwards;
   }
-  
+
   @keyframes lineGrow1 {
     to {
       height: 28vh;
     }
   }
+
   @keyframes lineGrow2 {
     to {
       height: 20vh;
     }
   }
+
   @keyframes lineGrow3 {
     to {
       height: 19vh;
     }
   }
 
-  .moon{
-    height: 100vh;
+  .moon {
+    height: 100%;
     padding-top: 5vh;
     padding-bottom: 5vh;
 
-    .vh-90{
+    .vh-90 {
       height: 90vh;
     }
   }
 
-  .feedback{
+  .feedback {
     width: 400px;
+    background-color: #FFFFFF;
+    border-radius: 8px;
+  }
+
+  .feedback:hover {
+    width: 400px;
+    background-color: #FFFFFF;
+    border-radius: 8px;
+  }
+
+  .marquee {
+    width: 100vw;
+    height: 225px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+
+  .marquee-list {
+    left: 0px;
+    position: absolute;
   }
 }
 
