--- a/assets/scss/pages/_proudcts.scss
+++ b/assets/scss/pages/_proudcts.scss
@@ -30,6 +30,8 @@
   background-color:#FCFAF8;
 }
 
+
+
 .products-nav .nav-underline{
   gap: 0px;
 }
@@ -46,12 +48,36 @@
 //   color:black;
 // }
 
+.products-link .card{
+  border: 0px;
+  border-radius: 0px;
+  overflow: hidden;
+}
+
+.products-link .card:hover{
+  border: $primary-100 1px solid;
+  border-radius: 16px;
+  
+  .card-img-top{
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+  }
+
+  .card-body{
+    background-color: $primary-50;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 16px;
+    border-bottom-right-radius: 16px;
+  }
+}
 
 .ratio>*{
   left: auto;
   user-select: none;
 }
-
 
 .products-label{
   width: 100%;
@@ -75,15 +101,21 @@
   opacity: 1;
 }
 
+.productsHeart:hover + .products-heartFilled{
+  opacity: 1;
+}
+
 .products-heartOutlined {
   position: absolute;
   cursor: pointer;
+  z-index: 2;
 }
 
 .products-heartFilled{
   position: absolute;
   opacity: 0;
   cursor: pointer;
+  z-index: 3;
 }
 
 .products-pagination{
@@ -151,13 +183,13 @@
     font-size: 20px;
     line-height: 1.5;
     letter-spacing: 2px;
- }
+  }
 
- .products-label-md-large{
+  .products-label-md-large{
     font-family: "Noto Sans TC", sans-serif;
     font-weight: 700;
     font-size: 18px;
     line-height: 1.5;
     letter-spacing: 2px;
- }
+  }
 }
