--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -145,6 +145,7 @@
     width: 400px;
     background-color: #FFFFFF;
     border-radius: 8px;
+    margin-left: 28px;
   }
 
   .feedback:hover {
@@ -153,8 +154,8 @@
     border-radius: 8px;
   }
 
-  .marquee {
-    width: 100vw;
+  .box {
+    width: 100%;
     height: 225px;
     overflow: hidden;
     display: flex;
@@ -163,9 +164,10 @@
     position: relative;
   }
 
-  .marquee-list {
+  .list {
     left: 0px;
     position: absolute;
+    display: flex;
   }
 }
 
